# ChangeLog for net-libs/glib-networking
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/glib-networking/ChangeLog,v 1.18 2011/09/18 11:33:35 armin76 Exp $

  18 Sep 2011; Raúl Porcel <armin76@gentoo.org> glib-networking-2.28.7.ebuild:
  alpha/ia64/sh/sparc stable wrt #376793

  12 Sep 2011; Kacper Kowalik <xarthisius@gentoo.org>
  glib-networking-2.28.7.ebuild:
  ppc/ppc64 stable wrt #376793

  09 Sep 2011; Jeroen Roovers <jer@gentoo.org> glib-networking-2.28.7.ebuild:
  Stable for HPPA (bug #376793).

  04 Sep 2011; Markus Meier <maekke@gentoo.org> glib-networking-2.28.7.ebuild:
  arm/x86 stable, bug #376793

  04 Sep 2011; Tony Vroon <chainsaw@gentoo.org> glib-networking-2.28.7.ebuild:
  Marked stable as a dependency of net-libs/libsoup-2.34.3 based on arch
  testing by Agostino "ago" Sarubbo in bug #376793 filed by Pacho Ramos.

  28 Jul 2011; Pacho Ramos <pacho@gentoo.org> -glib-networking-2.28.5.ebuild,
  -glib-networking-2.28.6.1.ebuild, glib-networking-2.28.7.ebuild:
  Remove old and RDEPEND on a fixed libproxy version to prevent errors with
  buggy xulrunner and webkit backends.

  15 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org>
  glib-networking-2.28.7.ebuild:
  Marked ~ppc/~ppc64 wrt #365331

  10 Jul 2011; Matt Turner <mattst88@gentoo.org> glib-networking-2.28.7.ebuild:
  Added ~mips, bug 365331

  07 Jul 2011; Alexis Ballier <aballier@gentoo.org>
  glib-networking-2.28.7.ebuild:
  keyword ~x86-fbsd, bug #365331

  11 Jun 2011; Raúl Porcel <armin76@gentoo.org> glib-networking-2.28.5.ebuild,
  glib-networking-2.28.6.1.ebuild, glib-networking-2.28.7.ebuild:
  Add ~alpha/~ia64/~sh/~sparc wrt #365331

  27 May 2011; Jeroen Roovers <jer@gentoo.org> glib-networking-2.28.6.1.ebuild,
  glib-networking-2.28.7.ebuild:
  Marked ~hppa (bug #365331).

  26 May 2011; Markus Meier <maekke@gentoo.org>
  glib-networking-2.28.6.1.ebuild, glib-networking-2.28.7.ebuild:
  add ~arm, bug #365331
