@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/glib-networking
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/glib-networking/ChangeLog,v 1.18 2011/09/18 11:33:35 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/glib-networking/ChangeLog,v 1.19 2011/09/27 12:59:41 nirbheek Exp $
+
+*glib-networking-2.30.0 (27 Sep 2011)
+
+  27 Sep 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
+  +glib-networking-2.30.0.ebuild:
+  Bump to 2.30, from the GNOME overlay. Ebuild updates by tetromino.
 
   18 Sep 2011; Raúl Porcel <armin76@gentoo.org> glib-networking-2.28.7.ebuild:
   alpha/ia64/sh/sparc stable wrt #376793
